# codewars

./: README.md
cpp/: CMakeLists.txt  kata_are_they_the_same.cpp  kata_counting-duplicates.cpp  kata_equal-sides-of-an-array.cpp  kata_is-a-number-prime.cpp  kata_is_this_a_triangle.cpp  kata_pyramid-array.cpp  kata_rot13.cpp  kata_sum-of-digits-slash-digital-root.cpp  kata_vaporcode.cpp
js/: kata_are_they_the_same.js  kata_pyramid-array.js  kata_rot13.js  kata_vaporcode.js
